{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 7,
  "lineage": "71b269fb-3b99-1aaf-10a8-2cb0325158da",
  "resources": [
    {
      "module": "module.defaults",
      "mode": "data",
      "type": "aws_subnet",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415352219645:subnet/subnet-094c56ba83707ef6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.80.0/20",
            "default_for_az": true,
            "id": "subnet-094c56ba83707ef6d",
            "map_public_ip_on_launch": true,
            "owner_id": "415352219645",
            "state": "available",
            "vpc_id": "vpc-09aa4e0cc70c3073d"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415352219645:subnet/subnet-0b925e96b3a36bf90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "172.31.64.0/20",
            "default_for_az": true,
            "id": "subnet-0b925e96b3a36bf90",
            "map_public_ip_on_launch": true,
            "owner_id": "415352219645",
            "state": "available",
            "vpc_id": "vpc-09aa4e0cc70c3073d"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415352219645:subnet/subnet-0bc6cb10650413e9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "id": "subnet-0bc6cb10650413e9f",
            "map_public_ip_on_launch": true,
            "owner_id": "415352219645",
            "state": "available",
            "vpc_id": "vpc-09aa4e0cc70c3073d"
          }
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415352219645:subnet/subnet-0bd7c38443a22339d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "172.31.48.0/20",
            "default_for_az": true,
            "id": "subnet-0bd7c38443a22339d",
            "map_public_ip_on_launch": true,
            "owner_id": "415352219645",
            "state": "available",
            "vpc_id": "vpc-09aa4e0cc70c3073d"
          }
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415352219645:subnet/subnet-0ecdee6f450f020bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "id": "subnet-0ecdee6f450f020bd",
            "map_public_ip_on_launch": true,
            "owner_id": "415352219645",
            "state": "available",
            "vpc_id": "vpc-09aa4e0cc70c3073d"
          }
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415352219645:subnet/subnet-0f1ea934d321b9b9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "id": "subnet-0f1ea934d321b9b9e",
            "map_public_ip_on_launch": true,
            "owner_id": "415352219645",
            "state": "available",
            "vpc_id": "vpc-09aa4e0cc70c3073d"
          }
        }
      ]
    },
    {
      "module": "module.defaults",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415352219645:vpc/vpc-09aa4e0cc70c3073d",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0d60dd7bc282f5083",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-7182560b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09aa4e0cc70c3073d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d47ad0a72946796f",
            "owner_id": "415352219645",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.defaults",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415352219645:security-group/sg-0ab577c32017ba926",
            "description": "Allow inbound traffic from Security Groups and CIDRs. Allow all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0ab577c32017ba926",
            "ingress": [],
            "name": "exact-hare",
            "name_prefix": "",
            "owner_id": "415352219645",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-09aa4e0cc70c3073d"
          },
          "dependencies": [
            "module.defaults.data.aws_vpc.default",
            "random_pet.this"
          ]
        }
      ]
    },
    {
      "module": "module.defaults",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress traffic",
            "from_port": 0,
            "id": "sgrule-3517464873",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ab577c32017ba926",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "dependencies": [
            "module.defaults.aws_security_group.this",
            "module.defaults.data.aws_vpc.default",
            "random_pet.this"
          ]
        }
      ]
    }
  ]
}